# xqf

./: .cvsignore  .gitignore  .gitmodules  .travis.yml  AUTHORS  AUTHORS.md  BUGS  CMakeLists.txt  ChangeLog  GUIDELINES.md  Makefile.am  NEWS  NEWS.md  README  README.md  TODO  autogen.sh  clean.sh  configure.ac  configure.in  gtkrc  mktarsnapshot  pot_generator.sh  vc  xqf-acinclude-nogtk1.m4  xqf.6  xqf.desktop  xqf.desktop.in  xqf.spec.in
.github/workflows/: build.yml
docs/: Makefile.am  PreLaunch.example  build  copykdeflags  demo.script  xqfdocs.html
pixmaps/: Makefile.am  xqf.xpm
pixmaps/128x128/: Makefile.am
pixmaps/22x22/: Makefile.am
pixmaps/32x32/: Makefile.am
pixmaps/48x48/: Makefile.am
pixmaps/flags/: .cvsignore  Makefile.am
pixmaps/flags/country/: COPYING
pixmaps/scalable/: Makefile.am
pixmaps/trayicon/: Makefile.am  busy.ani  ready.ani
po/: .cvsignore  ChangeLog  LINGUAS  Makevars  POTFILES.in  ca.po  da.po  de.po  es.po  fi.po  fr.po  pl.po  ru.po  xqf.pot
scripts/: pot_generator.sh
src/: .cvsignore  .gitignore  Makefile.am  addmaster.c  addmaster.h  addserver.c  addserver.h  callbacks.c  callbacks.h  config.c  config.h  country-filter.c  country-filter.h  crntotga.cpp  crntotga.h  debug.c  debug.h  defs.h  dialogs.c  dialogs.h  dns.c  dns.h  filter.c  filter.h  flt-player.c  flt-player.h  game.c  game.h  games.c  games.xml  gamesxml2c.c  gensyms.pl  history.c  history.h  host.c  host.h  hufffreq.h  huffman.c  huffman.h  i18n.h  (+74 more)
src/tga/: Makefile.am  memtopixmap.c  memtopixmap.h  tga.c  tga.h
src/xpm/: Makefile.am  aao.xpm  alienarena.xpm  aq2.xpm  bf1942.xpm  buddy-blue.xpm  buddy-green.xpm  buddy-red.xpm  cdiesel.xpm  cod.xpm  cod2.xpm  cod4.xpm  coduo.xpm  codwaw.xpm  dday.xpm  ddnet.xpm  doom3.xpm  error.xpm  etl.xpm  etqw.xpm  gamespy3d.xpm  green-plus.xpm  group-blue.xpm  group-green.xpm  group-red.xpm  hex.xpm  hl2.xpm  hla2.xpm  hw.xpm  iourt.xpm  jk2.xpm  jk3.xpm  kp.xpm  lan.xpm  locked.xpm  locked_punkbuster.xpm  man-black.xpm  man-yellow.xpm  mohaa.xpm  netp.xpm  (+48 more)
src/zip/: Makefile.am  README  ioapi.c  ioapi.h  unzip.c  unzip.h
tools/: do_checkinstall  import_flags  import_flags.sh  import_flags_from_teeworlds.sh  pot_generator  qstat_savage  qstat_savage.sh  travis_update_packages  travis_update_packages.sh  wiki_game_list
xqf/: .cvsignore  AUTHORS  BUGS  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  clean.sh  configure.in  gtkrc  mktarsnapshot  vc  xqf.desktop.in  xqf.spec.in
xqf/docs/: Makefile.am  build  convertmaxmindflags  xqfdocs.html
xqf/pixmaps/: Makefile.am
xqf/po/: .cvsignore  ChangeLog  Makevars  POTFILES.in  ca.po  da.po  de.po  es.po  fr.po  ru.po
xqf/src/: .cvsignore  Makefile.am  addmaster.c  addserver.c  config.c  config.h  country-filter.c  country-filter.h  debug.c  debug.h  dialogs.c  dialogs.h  dns.c  filter.c  filter.h  flt-player.c  flt-player.h  game.c  game.h  games.c  games.xml  gamesxml2c.c  gensyms.pl  history.c  host.c  host.h  launch.c  launch.h  loadpixmap.c  loadpixmap.h  menus.c  menus.h  pixmaps.c  pixmaps.h  pref.c  pref.h  psearch.c  q3maps.c  qstat.cfg  rc.c  (+33 more)
xqf/src/tga/: memtopixmap.c  memtopixmap.h  tga.h
xqf/src/xpm/: Makefile.am  aao.xpm  connect.xpm  delete.xpm  descent3.xpm  et.xpm  gamespy3d.xpm  hl.xpm  hr2.xpm  locked_punkbuster.xpm  man-red.xpm  q.xpm  q1.xpm  q4.xpm  record.xpm  server-na.xpm  server-to.xpm  stvef.xpm  t2.xpm  un.xpm  ut2004.xpm
xqf/src/zip/: ioapi.c  ioapi.h  unzip.c  unzip.h
